# J--

./: CMakeLists.txt  CONTRIBUTING.md  CodeOfConduct.md  LICENCE.md  README.md  import.jdd  main.cpp  main.jdd
Definitions/Data/: Data.cpp  Data.h
Definitions/Function/: Arguments.cpp  Arguments.h  Function.cpp  Function.h  ReturnVariable.cpp  ReturnVariable.h
Definitions/Types/: Types.h
Definitions/Value/: Value.cpp  Value.h
Definitions/Variable/: Variable.cpp  Variable.h
Expecter/: Expecter.cpp  Expecter.h
Lexer/: Lexer.cpp  Lexer.h
Parser/: Parser.cpp  Parser.h
src/Definitions/Data/: Data.cpp  Data.h
src/Definitions/Functions/: Functions.cpp  Functions.h
src/Definitions/Types/: Types.h
src/Definitions/Value/: Value.cpp  Value.h
src/Definitions/Variables/: Variables.cpp  Variables.h
src/Expecter/: Expecter.cpp  Expecter.h
src/LexerParser/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h
src/Modules/: ModuleManager.cpp  ModuleManager.h  String.cpp  String.h
src/Modules/Boolean/: Boolean.cpp  Boolean.h
src/Modules/Double/: Double.cpp  Double.h
src/Modules/Integer/: Integer.cpp  Integer.h
src/Modules/String/: String.cpp  String.h
